--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 </div>
                 <div class="header-right">
                     <nav class="header-nav">
-                        <ul class="header-nav-list">
-                            <li class="header-nav-item"><a class="to-link" href="#card">Card</a></li>
-                            <li class="header-nav-item"><a class="to-link" href="#news">News</a></li>
-                            <li class="header-nav-item"><a class="to-link" href="#price">Price</a></li>
-                            <li class="header-nav-item"><a class="to-link" href="#access">Access</a></li>
-                            <li class="header-nav-item"><a class="to-link" href="#contact">Contact</a></li>
-                        </ul>
+                        <div class="header-nav-list">
+                            <p class="header-nav-item"><a class="to-link" href="#card">Card</a></p>
+                            <p class="header-nav-item"><a class="to-link" href="#news">News</a></p>
+                            <p class="header-nav-item"><a class="to-link" href="#price">Price</a></p>
+                            <p class="header-nav-item"><a class="to-link" href="#access">Access</a></p>
+                            <p class="header-nav-item"><a class="to-link" href="#contact">Contact</a></p>
+                        </div>
                     </nav>
                 </div>
             </div>
